--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,12 +23,4 @@ jobs:
               run: pip3 install pylint
 
             - name: Enforce best practices with pylint in tests
-              run: python3 -m pylint [dont leave me blank]
-
-    build:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v2
-            
-            - name: Test
-              run: python3 [dont leave me blank]
+              run: python3 -m pylint *.py
