change title of release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,6 @@ jobs:
                 repo_token: "${{ secrets.GITHUB_TOKEN }}"
                 automatic_release_tag: "latest"
                 prerelease: true
-                title: "$('%Y-%m-%d')"
+                title: "latest"
                 files: |
                   ./dist/data-entry
