--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,5 +22,8 @@ jobs:
             - name: Install pylint
               run: pip3 install pylint
 
+            - name: Install all dependencies
+              run: pip3 install -r requirements.txt
+
             - name: Enforce best practices with pylint in tests
               run: python3 -m pylint *.py
